# MultiplayerSnake

./: CMakeLists.txt  LICENSE  README.md
src/: board_parameters.h  client.cpp  client.h  main.cpp  server.cpp  server.h
src/client/: client.cpp  client.h  main.cpp
src/server/: Client.h  Player.h  main.cpp  server.cpp  server.h
src/server/classes/: Player.h  Point.h  Score.h
